header burger container z-index fix

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -169,7 +169,7 @@
   cursor: pointer;
 
   &__container {
-    z-index: 5;
+    z-index: 4;
     position: absolute;
     display: flex;
     flex-direction: column;
